# LibriPal

./: README.md
backend/: .env  .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/database/: schema.sql
backend/models/: __init__.py  database.py  pydantic_models.py
backend/routers/: __init__.py  auth.py  books.py  chat.py  users.py
backend/services/: __init__.py  ai_service.py  book_service.py  notification_service.py  reminder_service.py
backend/utils/: __init__.py  auth.py  helpers.py
database/migrations/: 001_initial_tables.sql  002_add_ai_summary.sql  003_add_indexes.sql
database/seeds/: library_settings.sql  sample_book.sql
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.telegram  docker-compose.yml  nginx.conf
frontend/: .env  .gitignore  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.jsx  index.css  index.js
frontend/src/components/: BookSearch.jsx  ChatInterface.jsx  Dashboard.jsx  LoginPage.jsx  Navigation.jsx  UserProfile.jsx
frontend/src/components/common/: BookCard.jsx  ErrorBoundary.jsx  LoadingSpinner.jsx
frontend/src/hooks/: useApi.js  useAuth.js
frontend/src/services/: api.js
frontend/src/styles/: Navigation.css  globals.css
frontend/src/styles/components/: BookSearch.css  Chat.css  Dashboard.css
frontend/src/utils/: constants.js  helpers.js
scripts/: deploy.sh  seed_data.py  setup_database.py
telegram_bot/: __init__.py  bot.py  requirements.txt
